# fep_sdk

./: CMakeLists.txt  FEP_SDKConfig.cmake  FEP_SDKConfigVersion.cmake.in  FEP_SDKMacros.cmake  FEP_SDKSettings.cmake.in  README.md
doc/: CMakeLists.txt  run_doxygen.cmake.in
doc/input/: fep_main.dox
include/: fep_core_sdk.h  fep_sdk_version.h.in
test/private/install_complete/: reference.yaml
